# tcc-univesp

./: .gitignore  README.md  pyproject.toml
Entrada/: ocorrencias_cobre.csv  ocorrencias_ouro.csv  resultados_cobre.csv  resultados_ouro.csv  tcc.docx  tcc.xlsx
notebooks/: tcc.ipynb
notebooks/v1/: tcc_cobre.ipynb  tcc_ferro.ipynb  tcc_ouro.ipynb
notebooks/v2/: probability_plot.ipynb  tcc_cobre.ipynb  tcc_ouro.ipynb
